// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/Checkbox matches screenshot 1`] = `
<DocumentFragment>
  <div
    class="c-gidqah decaCheckbox-root"
  >
    <input
      class="c-eCNcrt c-eCNcrt-kueLmT-isDisabled-false c-eCNcrt-hAPajf-cv decaCheckbox-input"
      id=":r0:"
      type="checkbox"
      value=""
    />
    <label
      class="c-jEmTjg c-jEmTjg-eVJqzf-size-md c-jEmTjg-hqEieG-isDisabled-false c-jEmTjg-jQVVMl-cv"
      for=":r0:"
    >
      <svg
        aria-hidden="true"
        class="StyledIconBase-ea9ulj-0 lbJwfL decaCheckbox-icon"
        fill="currentColor"
        focusable="false"
        viewBox="0 0 512 512"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="m173.898 439.404-166.4-166.4c-9.997-9.997-9.997-26.206 0-36.204l36.203-36.204c9.997-9.998 26.207-9.998 36.204 0L192 312.69 432.095 72.596c9.997-9.997 26.207-9.997 36.204 0l36.203 36.204c9.997 9.997 9.997 26.206 0 36.204l-294.4 294.401c-9.998 9.997-26.207 9.997-36.204-.001z"
          fill="currentColor"
        />
      </svg>
      Label Text
    </label>
  </div>
</DocumentFragment>
`;

exports[`components/Checkbox renders all colors 1`] = `
<DocumentFragment>
  <div
    class="c-gidqah decaCheckbox-root"
  >
    <input
      class="c-eCNcrt c-eCNcrt-kueLmT-isDisabled-false c-eCNcrt-hAPajf-cv decaCheckbox-input"
      id=":r3:"
      type="checkbox"
      value=""
    />
    <label
      class="c-jEmTjg c-jEmTjg-eVJqzf-size-md c-jEmTjg-hqEieG-isDisabled-false"
      for=":r3:"
    >
      <svg
        aria-hidden="true"
        class="StyledIconBase-ea9ulj-0 lbJwfL decaCheckbox-icon"
        fill="currentColor"
        focusable="false"
        viewBox="0 0 512 512"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="m173.898 439.404-166.4-166.4c-9.997-9.997-9.997-26.206 0-36.204l36.203-36.204c9.997-9.998 26.207-9.998 36.204 0L192 312.69 432.095 72.596c9.997-9.997 26.207-9.997 36.204 0l36.203 36.204c9.997 9.997 9.997 26.206 0 36.204l-294.4 294.401c-9.998 9.997-26.207 9.997-36.204-.001z"
          fill="currentColor"
        />
      </svg>
    </label>
  </div>
  <div
    class="c-gidqah decaCheckbox-root"
  >
    <input
      class="c-eCNcrt c-eCNcrt-kueLmT-isDisabled-false c-eCNcrt-jrLBMX-cv decaCheckbox-input"
      id=":r4:"
      type="checkbox"
      value=""
    />
    <label
      class="c-jEmTjg c-jEmTjg-eVJqzf-size-md c-jEmTjg-hqEieG-isDisabled-false"
      for=":r4:"
    >
      <svg
        aria-hidden="true"
        class="StyledIconBase-ea9ulj-0 lbJwfL decaCheckbox-icon"
        fill="currentColor"
        focusable="false"
        viewBox="0 0 512 512"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="m173.898 439.404-166.4-166.4c-9.997-9.997-9.997-26.206 0-36.204l36.203-36.204c9.997-9.998 26.207-9.998 36.204 0L192 312.69 432.095 72.596c9.997-9.997 26.207-9.997 36.204 0l36.203 36.204c9.997 9.997 9.997 26.206 0 36.204l-294.4 294.401c-9.998 9.997-26.207 9.997-36.204-.001z"
          fill="currentColor"
        />
      </svg>
    </label>
  </div>
  <div
    class="c-gidqah decaCheckbox-root"
  >
    <input
      class="c-eCNcrt c-eCNcrt-kueLmT-isDisabled-false c-eCNcrt-hQZXdn-cv decaCheckbox-input"
      id=":r5:"
      type="checkbox"
      value=""
    />
    <label
      class="c-jEmTjg c-jEmTjg-eVJqzf-size-md c-jEmTjg-hqEieG-isDisabled-false"
      for=":r5:"
    >
      <svg
        aria-hidden="true"
        class="StyledIconBase-ea9ulj-0 lbJwfL decaCheckbox-icon"
        fill="currentColor"
        focusable="false"
        viewBox="0 0 512 512"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="m173.898 439.404-166.4-166.4c-9.997-9.997-9.997-26.206 0-36.204l36.203-36.204c9.997-9.998 26.207-9.998 36.204 0L192 312.69 432.095 72.596c9.997-9.997 26.207-9.997 36.204 0l36.203 36.204c9.997 9.997 9.997 26.206 0 36.204l-294.4 294.401c-9.998 9.997-26.207 9.997-36.204-.001z"
          fill="currentColor"
        />
      </svg>
    </label>
  </div>
  <div
    class="c-gidqah decaCheckbox-root"
  >
    <input
      class="c-eCNcrt c-eCNcrt-kueLmT-isDisabled-false c-eCNcrt-dJTBcb-cv decaCheckbox-input"
      id=":r6:"
      type="checkbox"
      value=""
    />
    <label
      class="c-jEmTjg c-jEmTjg-eVJqzf-size-md c-jEmTjg-hqEieG-isDisabled-false"
      for=":r6:"
    >
      <svg
        aria-hidden="true"
        class="StyledIconBase-ea9ulj-0 lbJwfL decaCheckbox-icon"
        fill="currentColor"
        focusable="false"
        viewBox="0 0 512 512"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="m173.898 439.404-166.4-166.4c-9.997-9.997-9.997-26.206 0-36.204l36.203-36.204c9.997-9.998 26.207-9.998 36.204 0L192 312.69 432.095 72.596c9.997-9.997 26.207-9.997 36.204 0l36.203 36.204c9.997 9.997 9.997 26.206 0 36.204l-294.4 294.401c-9.998 9.997-26.207 9.997-36.204-.001z"
          fill="currentColor"
        />
      </svg>
    </label>
  </div>
  <div
    class="c-gidqah decaCheckbox-root"
  >
    <input
      class="c-eCNcrt c-eCNcrt-kueLmT-isDisabled-false c-eCNcrt-iZGOuP-cv decaCheckbox-input"
      id=":r7:"
      type="checkbox"
      value=""
    />
    <label
      class="c-jEmTjg c-jEmTjg-eVJqzf-size-md c-jEmTjg-hqEieG-isDisabled-false"
      for=":r7:"
    >
      <svg
        aria-hidden="true"
        class="StyledIconBase-ea9ulj-0 lbJwfL decaCheckbox-icon"
        fill="currentColor"
        focusable="false"
        viewBox="0 0 512 512"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="m173.898 439.404-166.4-166.4c-9.997-9.997-9.997-26.206 0-36.204l36.203-36.204c9.997-9.998 26.207-9.998 36.204 0L192 312.69 432.095 72.596c9.997-9.997 26.207-9.997 36.204 0l36.203 36.204c9.997 9.997 9.997 26.206 0 36.204l-294.4 294.401c-9.998 9.997-26.207 9.997-36.204-.001z"
          fill="currentColor"
        />
      </svg>
    </label>
  </div>
</DocumentFragment>
`;

exports[`components/Checkbox renders all sizes 1`] = `
<DocumentFragment>
  <div
    class="c-gidqah decaCheckbox-root"
  >
    <input
      class="c-eCNcrt c-eCNcrt-kueLmT-isDisabled-false c-eCNcrt-hAPajf-cv decaCheckbox-input"
      id=":r8:"
      type="checkbox"
      value=""
    />
    <label
      class="c-jEmTjg c-jEmTjg-gPIcnu-size-sm c-jEmTjg-hqEieG-isDisabled-false"
      for=":r8:"
    >
      <svg
        aria-hidden="true"
        class="StyledIconBase-ea9ulj-0 lbJwfL decaCheckbox-icon"
        fill="currentColor"
        focusable="false"
        viewBox="0 0 512 512"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="m173.898 439.404-166.4-166.4c-9.997-9.997-9.997-26.206 0-36.204l36.203-36.204c9.997-9.998 26.207-9.998 36.204 0L192 312.69 432.095 72.596c9.997-9.997 26.207-9.997 36.204 0l36.203 36.204c9.997 9.997 9.997 26.206 0 36.204l-294.4 294.401c-9.998 9.997-26.207 9.997-36.204-.001z"
          fill="currentColor"
        />
      </svg>
    </label>
  </div>
  <div
    class="c-gidqah decaCheckbox-root"
  >
    <input
      class="c-eCNcrt c-eCNcrt-kueLmT-isDisabled-false c-eCNcrt-hAPajf-cv decaCheckbox-input"
      id=":r9:"
      type="checkbox"
      value=""
    />
    <label
      class="c-jEmTjg c-jEmTjg-eVJqzf-size-md c-jEmTjg-hqEieG-isDisabled-false"
      for=":r9:"
    >
      <svg
        aria-hidden="true"
        class="StyledIconBase-ea9ulj-0 lbJwfL decaCheckbox-icon"
        fill="currentColor"
        focusable="false"
        viewBox="0 0 512 512"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="m173.898 439.404-166.4-166.4c-9.997-9.997-9.997-26.206 0-36.204l36.203-36.204c9.997-9.998 26.207-9.998 36.204 0L192 312.69 432.095 72.596c9.997-9.997 26.207-9.997 36.204 0l36.203 36.204c9.997 9.997 9.997 26.206 0 36.204l-294.4 294.401c-9.998 9.997-26.207 9.997-36.204-.001z"
          fill="currentColor"
        />
      </svg>
    </label>
  </div>
  <div
    class="c-gidqah decaCheckbox-root"
  >
    <input
      class="c-eCNcrt c-eCNcrt-kueLmT-isDisabled-false c-eCNcrt-hAPajf-cv decaCheckbox-input"
      id=":ra:"
      type="checkbox"
      value=""
    />
    <label
      class="c-jEmTjg c-jEmTjg-komCFO-size-lg c-jEmTjg-hqEieG-isDisabled-false"
      for=":ra:"
    >
      <svg
        aria-hidden="true"
        class="StyledIconBase-ea9ulj-0 lbJwfL decaCheckbox-icon"
        fill="currentColor"
        focusable="false"
        viewBox="0 0 512 512"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="m173.898 439.404-166.4-166.4c-9.997-9.997-9.997-26.206 0-36.204l36.203-36.204c9.997-9.998 26.207-9.998 36.204 0L192 312.69 432.095 72.596c9.997-9.997 26.207-9.997 36.204 0l36.203 36.204c9.997 9.997 9.997 26.206 0 36.204l-294.4 294.401c-9.998 9.997-26.207 9.997-36.204-.001z"
          fill="currentColor"
        />
      </svg>
    </label>
  </div>
</DocumentFragment>
`;
